JDK 17 compatibility
Bump gradle to 7.2 and minimal build script updates