@@ -1,7 +1,6 @@
 plugins {
-    id 'java'
+    id 'java-library'
     id 'com.github.johnrengelman.shadow' version '4.0.3'  apply false
-    id "com.bmuschko.nexus" version "2.3.1"
     id 'maven-publish'
     id 'antlr'
     id "org.sonarqube" version "2.7"
@@ -21,7 +20,7 @@ allprojects {
     description = """neo4j-apoc-procedures"""
 }
 
-apply plugin: 'java'
+apply plugin: 'java-library'
 
 repositories {
 
@@ -36,7 +35,7 @@ repositories {
 }
 
 subprojects {
-    apply plugin: 'java'
+    apply plugin: 'java-library'
 
     repositories {
 
@@ -82,6 +81,14 @@ subprojects {
             minHeapSize = "128m"
             maxHeapSize = "512m"
         }
+
+        jvmArgs = [ "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.io=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.util=ALL-UNNAMED",
+                    "--add-opens", "java.base/java.util.concurrent=ALL-UNNAMED",
+                    "--add-opens", "java.base/sun.net.www.protocol.http=ALL-UNNAMED",
+                    "--add-opens", "java.base/sun.nio.ch=ALL-UNNAMED" ]
 
         filter {
             setFailOnNoMatchingTests(false)
